# frbrowser

./: CMakeLists.txt  LICENSE  README.md  build.sh  fr-browser.desktop.in
build-64bit/: CMakeCache.txt  Makefile  cmake_install.cmake  fr-browser  fr-browser.desktop
src/: bookmarks.c  bookmarks.h  browser.c  browser.h  history.c  history.h  main.c  tabs.c  tabs.h  utils.c  utils.h  window.c  window.h
